# Onouris

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json  vcpkg.json.in
cmake/: compiler.targets.cmake  helpers.cmake  project.metadata.cmake  vcpkg.prerequisites.cmake
src/: main.cpp
src/constants/: app.constants.hpp
